--- a/doc/规范后端接口.md
+++ b/doc/规范后端接口.md
@@ -1,1 +1,105 @@
 需要按照原计划的大部分功能，实现完全的todolist应用的所有请求，以及为未来开发预留一部分数据库的冗余设计
+
+```
+topic{
+    id:int,
+    topicTitle:string,
+    topicDescription:string
+}
+
+
+todo{
+    id:int,
+    todoTitle:string,
+    todoContent:string,
+    todoStatus:int,
+    topicTitle:string,
+    deadline:date
+}
+```
+
+### 获取所有topics
+
+实现 getTopics
+
+请求：GET 
+
+路由：/todolist/topics
+
+返回类型：list
+
+返回内容：topic构成的list
+
+### 获取topic下的所有todos
+getTodosByTopic
+
+请求：GET
+
+路由：/todolist/todos/{id}
+
+返回类型：
+
+### 直接获取所有todos
+getTodosAll
+
+GET
+
+/todolist/todos
+
+### 添加topic
+addTopic
+
+POST
+
+/todolist/topics
+
+发送格式 JSON
+
+附加要求：topic是不能出现重复的,空topic也算是一个默认的topic,但是
+不能添加空topic，因为已经默认存在
+
+
+### 添加todo
+addTodo
+
+POST
+
+/todolist/todos
+
+发送格式 JSON
+
+### 删除todo
+deleteTodoById
+
+DELETE
+
+/todolist/todos
+
+参数 todo.title
+
+### 删除topic
+deleteTopicById
+
+DELETE
+
+/todolist/topics/{id}
+
+参数 topic.title
+
+### 更新todo完成状态
+updateTodoStatusById
+
+UPDATE
+
+/todolist/todos/{todoId}
+
+参数 todo.status??//这里还没有设计完善
+
+
+### 更新todo内容，包括topic以及其他content
+updateTodoRecordById
+
+UPDATE
+
+/todolist/todos/{todoId}
+
