--- a/doc/规范后端接口.md
+++ b/doc/规范后端接口.md
@@ -1,112 +1,110 @@
-需要按照原计划的大部分功能，实现完全的todolist应用的所有请求，以及为未来开发预留一部分数据库的冗余设计
+以下是规范后的文档内容：
 
-```
-topic{
-    id:int,
-    topicTitle:string,
-    topicDescription:string
-}
+## Todolist 应用 API 规范
 
+### 数据模型
 
-todo{
-    id:int,
-    todoTitle:string,
-    todoContent:string,
-    todoStatus:int,
-    topicTitle:string,
-    deadline:date
+#### Topic 数据模型
+
+```json
+{
+    "id": "int",
+    "topicTitle": "string",
+    "topicDescription": "string"
 }
 ```
 
-### 获取所有topics
+#### Todo 数据模型
 
-实现 getTopics
+```json
+{
+    "id": "int",
+    "todoTitle": "string",
+    "todoContent": "string",
+    "todoStatus": "int",
+    "topicTitle": "string",
+    "deadline": "date"
+}
+```
 
-请求：GET 
+### API 接口
 
-路由：/todolist/topics
+#### 获取所有 Topics
 
-返回类型：list
+- **接口名称**：getTopics
+- **请求方法**：GET
+- **路由**：`/todolist/topics`
+- **返回类型**：list
+- **返回内容**：由 Topic 对象构成的列表
 
-返回内容：topic构成的list
+#### 获取指定 Topic 下的所有 Todos
 
-### 获取topic下的所有todos
-getTodosByTopic
+- **接口名称**：getTodosByTopic
+- **请求方法**：GET
+- **路由**：`/todolist/todos/{id}`
+- **返回类型**：list
+- **返回内容**：由 Todo 对象构成的列表，这些 Todo 属于指定的 Topic
 
-请求：GET
+#### 直接获取所有 Todos
 
-路由：/todolist/todos/{id}
+- **接口名称**：getTodosAll
+- **请求方法**：GET
+- **路由**：`/todolist/todos`
+- **返回类型**：list
+- **返回内容**：所有 Todo 对象的列表
 
-返回类型：
+#### 添加 Topic
 
-### 直接获取所有todos
-getTodosAll
+- **接口名称**：addTopic
+- **请求方法**：POST
+- **路由**：`/todolist/topics`
+- **发送格式**：JSON
+- **附加要求**：
+  - Topic 不能重复。
+  - 空 Topic 被视为一个默认的 Topic，但不允许添加空 Topic，因为默认已经存在。
 
-GET
+#### 添加 Todo
 
-/todolist/todos
+- **接口名称**：addTodo
+- **请求方法**：POST
+- **路由**：`/todolist/todos`
+- **发送格式**：JSON
 
-### 添加topic
-addTopic
+#### 删除 Todo
 
-POST
+- **接口名称**：deleteTodoById
+- **请求方法**：DELETE
+- **路由**：`/todolist/todos`
+- **参数**：
+  - `id`：待删除的 Todo 的id
 
-/todolist/topics
+#### 删除 Topic
 
-发送格式 JSON
+- **接口名称**：deleteTopicById
+- **请求方法**：DELETE
+- **路由**：`/todolist/topics`
+- **发送格式**：JSON
+- **参数**：
+  - `id`：待删除的 Topic 的id
 
-附加要求：topic是不能出现重复的,空topic也算是一个默认的topic,但是
-不能添加空topic，因为已经默认存在
+#### 更新 Todo 完成状态
 
+- **接口名称**：updateTodoStatusById
+- **请求方法**：UPDATE
+- **路由**：`/todolist/todos`
+- **发送格式**：JSON
+- 参数：
+  - `id`：待更新的 Todo 的id
+  - `status`: 待更新的Todo 的目前的状态
 
-### 添加todo
-addTodo
+#### 更新 Todo 内容，包括 Topic 及其他内容
 
-POST
+- **接口名称**：updateTodoRecordById
+- **请求方法**：UPDATE
+- **路由**：`/todolist/todos/{todoId}`
 
-/todolist/todos
+#### 更新 Topic 内容
 
-发送格式 JSON
-
-### 删除todo
-deleteTodoById
-
-DELETE
-
-/todolist/todos
-
-参数 todo.title
-
-### 删除topic
-deleteTopicById
-
-DELETE
-
-/todolist/topics/{id}
-
-参数 topic.title
-
-### 更新todo完成状态
-updateTodoStatusById
-
-UPDATE
-
-/todolist/todos/{todoId}
-
-参数 todo.status??//这里还没有设计完善
-
-
-### 更新todo内容，包括topic以及其他content
-updateTodoRecordById
-
-UPDATE
-
-/todolist/todos/{todoId}
-
-### 更新topic内容
-updateTopicById
-
-UPDATE
-
-/todolist/topics/{topicId}
-
+- **接口名称**：updateTopicById
+- **请求方法**：UPDATE
+- **路由**：`/todolist/topics/{topicId}`
