--- a/doc/规范后端接口.md
+++ b/doc/规范后端接口.md
@@ -101,7 +101,15 @@
 
 - **接口名称**：updateTodoRecordById
 - **请求方法**：UPDATE
-- **路由**：`/todolist/todos/{todoId}`
+- **路由**：`/todolist/todos`
+- **发送格式**：JSON
+
+  ```json
+  {
+    
+
+  }
+  ```
 
 #### 更新 Topic 内容
 
